<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dip"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="4dip"
        android:text="@string/title_car"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/carspinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dip"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="4dip"
        android:text="@string/title_duration"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/durationspinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:entries="@array/parkdauer_text" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:layout_marginTop="12dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonYES"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SMSYES" />

        <Button
            android:id="@+id/buttonNO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SMSNO" />
    </LinearLayout>

</LinearLayout>