<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="1dip"
    android:background="@drawable/box3"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:background="@drawable/box4"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/locationCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="2dip"
            android:text="@string/current_location"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/headerText" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/parkButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="20dip"
                android:layout_gravity="center_vertical"
                android:src="@drawable/parken_unknown" />

            <TextView
                android:id="@+id/currentAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dip"
                android:layout_marginLeft="2dip"
                android:layout_marginRight="20dip"
                android:layout_weight="0.08"
                android:layout_gravity="center_vertical"
                android:background="@drawable/box4"
                android:text="@string/current_location_unknown"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/locationText" />
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="2dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buy_ticket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_ticket" />

            <Button
                android:id="@+id/check_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_location" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:background="@drawable/box4"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/kpz_list_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="4dip"
            android:text="@string/no_info_kpz"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/headerText" />
        <!--
        <fragment
            android:id="@+id/kpz_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            class="at.the.gogo.parkoid.fragments.AddressListFragment" >
                    </fragment>
        -->

        <ListView
            android:id="@+id/kpz_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip" >
        </ListView>
    </LinearLayout>

</LinearLayout>